Unterstützung des 3-line seriell Interfaces für den PCF8814 Controller.
Unterstützung für Displays mit PCF8812 und PCF8814 Controllern.
Option LCD_SPI_OPEN_COL für SPI Schnittstelle ohne direktes VCC Signal, nur Pull-Up.
Angabe Flußspannung der Schutzdiode von Transistoren auch für ATmega168.
Angabe Kollektor-Reststrom bei BJT auch für ATmega168.
Bei graphischen Displays kann mit der Option NO_LONG_PINLAYOUT die Darstellung der Transistorpins 
 "123=EBC" statt "1=E 2=B 3=C" gewählt werden.
Optimierung mit avr-gcc mit Linker-Option --relax
Bei der Transistoruntersuchung mit dem 470k Widerstand wird das Schalten kurz mit dem 680 Ohm Widerstand unterstützt. 
Option DC_PWR bestimmt die Batteriespannung, oberhalb derer der DC_Pwr_Mode eingeschaltet wird.
Korrekturfaktor bei der C*ESR@TP1:3 Kapazitätsmessung durch 2.5% höhere Spannung.
Auch bei C+ESR@TP1:3 wird negative Restspannung berücksichtigt.
Bei Kondensatormessung mit grosser Kapazität wird negative Restspannung berücksichtigt.
Bei "DC Pwr Mode" keine Zeitbeschränkung der Sonderfunktionen.
Bei graphischen Displays Pin-Belegung von Transistoren als "Pin 1=E 2=B 3=C" in extra Zeile.
Erkennung des "DC Pwr Mode" bei Batteriespannung unter 0.9V .
Zeitsteuerung bei GetESR für mega2560 (arduino) angepasst.
Wartezeit nach Batterie-Unterspannung von 2s auf 5s erhöht.
Wartezeit für Ir Bestimmung von Dioden verlängert wegen möglicher Kapazität.
Bestimmung von RDSon für E-MOS Transistoren mit ATmega328/644/1280.
Frequenz-Eingang für Arduino mega, ATmega2560 ergänzt, PE6 muß mit PE5 gebrückt werden.
Bei Messungen C+ESR, [RL], [C] und Spannungsmessung wird alle 16 Messungen die Batteriespannung geprüft. 
Der Kapazitäts- und  Widerstands-Modus sind für Prozessoren mit mehr als 32k Flash ohne Menü verfügbar.
Der Kapazitäts-Modus wird am Ende der 1. Zeile durch [C] angezeigt.
Der Widerstands-Modus wird am Ende der 1. Zeile durch [R] oder [RL] angezeigt.